# recomendacao_filmes

./: .gitignore  pyproject.toml  requirements.txt
src/sistema_recomendacao/: api.py  app.py  main.py  notebook.ipynb  stream.py
