[project]
name = "sistema-recomendacao"
version = "0.1.0"
description = ""
authors = [
    {name = "claudio.carvalho",email = "claudio.carvalhogt@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "scikit-learn (>=1.8.0,<2.0.0)",
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "streamlit (>=1.55.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "sistema_recomendacao", from = "src"}]


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
